<resources>
    <string name="app_name" translatable="false">DiabetesBeeper</string>
    <string name="app_facebook" translatable="false">http://facebook.com/yahia.prt.31508</string>
    <string name="app_facebook_short" translatable="false">http://facebook.com/yahia.prt.31508</string>
    <string name="app_homepage" translatable="false">https://mydiabetes-prt.zyrosite.com/</string>
    <string name="app_homepage_short" translatable="false">https://mydiabetes-prt.zyrosite.com/</string>
    <string name="app_mail" translatable="false">mailto:mydiabetesprt@gmail.com</string>
    <string name="app_mail_short" translatable="false">mydiabetesprt@gmail.com</string>
    <string name="wait" translatable="false">wait…</string>
    <string name="title" translatable="false">Sample Activity #%d</string>
    <string name="na1">Don\'t Be Lazy</string>
    <string name="na2">Open the app and enter your new activities.</string>
    <string name="nb1">Your Health is Our Responsibility</string>
    <string name="nb2">Controlling your blood sugar is our job.</string>
    <string name="idplaystor" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAjHwVUhWuZSiEk8JLv50R3Da4Gaw9mt0A+ECNcT6p4aAfMTjwXZ0pjfdieuuipHZiC70biffKVDM0hqFo6G4+HNNzGsoBBAPxfdzn0jsqWsMubu9bH9wFE9MZF6rLdw3/ouC7WPIW3hlv8tNrPwTwPaP2+EwElp+E9yjBnfRum1jblOXc3knVWK9zjeVE0hMS8z7um2iZio2mlhgUQepd5+Co45r/Zo/RqY7cgo+9hoq5pLY3XhzRONvasZVg1Se65pSIconTBz7eKo8NbD2W2nieluzk5zB3/OIgS46guOHJFgmCQUSZfQmWAcP25+ZSwVfAwT9OEuT0ETF+jvMocwIDAQAB</string>
    <string name="google_pay_config" translatable="false">
        <string name="play" translatable="false">601</string>
    <string name="about">About</string>
    <string name="active">active</string>
    <string name="activity">Activity</string>
    <string name="all">All</string>
    <string name="alarm">Measure blood sugar</string>
    <string name="alarm_delete">Remove reminder</string>
    <string name="alarm_deleted">Removed reminder</string>
    <string name="alarm_desc">%s since the last measurement</string>
    <string name="alarm_desc_first">Thought about yet?</string>
    <string name="alarm_reminder">Reminder</string>
    <string name="alarm_reminder_none">No reminder</string>
    <string name="alarm_reminder_in">Reminder in</string>
    <string name="amount">Amount &#8230;</string>
    <string name="average">Average</string>
    <string name="average_symbol" translatable="false">Ø</string>
    <string name="back">Back</string>
    <string name="backup">Backup</string>
    <string name="backup_complete">Backup complete</string>
    <string name="backup_import">Backup is being restored &#8230;</string>
    <string name="backup_store">Store backup</string>
    <string name="backup_title">Choose backup</string>
    <string name="basal" translatable="false">Basal</string>
    <string name="bloodsugar">Blood Sugar</string>
    <string name="bolus">Bolus</string>
    <string name="bolus_no1">It is recommended not to inject a bolus.</string>
    <string name="bolus_no2">Instead some carbohydrate-heavy products should be consumed to prevent lower blood sugar level.</string>
    <string name="brand">Brand</string>
    <string name="calculator">Calculator</string>
    <string name="cancel">Cancel</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="category_pin">Pin category</string>
    <string name="category_pin_confirm">%s has been pinned</string>
    <string name="category_unpin_confirm">%s has been unpinned</string>
    <string name="cleanup">Clean Up</string>
    <string name="cleanup_desc">This will permanently delete all data on and before the chosen date.</string>
    <string name="contact">Contact</string>
    <string name="correction">Correction</string>
    <string name="correction_value">Correction factor</string>
    <string name="correction_value_desc">Blood sugar reduction by 1 IE insulin</string>
    <string name="data">Data</string>
    <string name="date_select">Select date</string>
    <string name="day_next">Next day</string>
    <string name="day_previous">Previous day</string>
    <string name="delete">Delete</string>
    <string name="diastolic">Diastolic</string>
    <string name="diastolic_acronym" translatable="false">diast.</string>
    <string name="distribution">Distribution</string>
    <string name="drawer_close">Close Navigator</string>
    <string name="drawer_open">Open Navigator</string>
    <string name="edit">Edit</string>
    <string name="energy_acronym" translatable="false">kcal</string>
    <string name="energy_acronym_2" translatable="false">kJ</string>
    <string name="entries">Entries</string>
    <string name="entry">Entry</string>
    <string name="entry_added">Entry added</string>
    <string name="entry_count_per_day">Entries per day</string>
    <string name="entry_edit">Edit entry</string>
    <string name="entry_delete">Delete entry</string>
    <string name="entry_deleted">Entry deleted</string>
    <string name="entry_new">New entry</string>
    <string name="export">Export</string>
    <string name="export_complete">Saved to %s</string>
    <string name="export_progress">PDF is being created</string>
    <string name="export_stamp">Report generated on</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="first_visit"></string>
    <string name="first_visit_desc">Enter your first value</string>
    <string name="makla">Food</string>
    <string name="makla_add">Add Food</string>
    <string name="makla_add_desc">Add Food</string>
    <string name="makla_common">Common Food</string>
    <string name="makla_delete">Delete Food</string>
    <string name="makla_deleted">Food deleted</string>
    <string name="makla_eaten_placeholder">%d eaten meals will be affected</string>
    <string name="makla_edit">Edit Food</string>
    <string name="makla_new">New Food</string>
    <string name="makla_search">Search for Food</string>
    <string name="format">Format</string>
    <string name="general">General</string>
    <string name="grams_acronym" translatable="false">g</string>
    <string name="milligrams_acronym" translatable="false">mg</string>
    <string name="grams_milliliters_acronym" translatable="false">g</string>
    <string name="hba1c">HbA1c</string>
    <string name="hba1c_estimated">Estimated HbA1c</string>
    <string name="hba1c_formula" translatable="false">HbA1c = 0,031 * %s 3-%s-%s + 2,393</string>
    <string name="home">Home</string>
    <string name="homepage">Website</string>
    <string name="hyper">Hyper</string>
    <string name="hyper_per_day">Hypers per day</string>
    <string name="hyphen" translatable="false">-</string>
    <string name="hypo">Hypo</string>
    <string name="hypo_per_day">Hypos per day</string>
    <string name="import_">Import</string>
    <string name="imprint">Imprint</string>
    <string name="in">in</string>
    <string name="info" translatable="false">Info</string>
    <string name="ingredients">Ingredients</string>
    <string name="insulin">Insulin</string>
    <string name="interval">Interval</string>
    <string name="latest">[value] [unit] ago</string>
    <string name="latest_moments">Moments ago</string>
    <string name="licenses">Developer :  Prt</string>
    <string name="log">Log</string>
    <string name="mail">E-Mail</string>
    <string name="meal">Meal</string>
    <string name="meal_optional">Meal (Optional)</string>
    <string name="measurement_add">Add measurement</string>
    <string name="measurement_latest">Latest</string>
    <string name="measurements">Measured</string>
    <string name="name">Name</string>
    <string name="no_data">No data available</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="note_append">Append notes</string>
    <string name="nutriments">Nutriments</string>
    <string name="nutriments_per_100g">Nutriments per 100 g</string>
    <string name="ok">OK</string>
    <string name="overview">Overview</string>
    <string name="per">per</string>
    <string name="per_day">per day</string>
    <string name="placeholder" translatable="false">-</string>
    <string name="pressure">Blood Pressure</string>
    <string name="pressure_acronym">Blood Pr.</string>
    <string name="pulse">Pulse</string>
    <string name="remove_placeholder">Remove %s</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="startscreen">Start screen</string>
    <string name="statistics">Statistics</string>
    <string name="store_values">Store</string>
    <string name="systolic">Systolic</string>
    <string name="systolic_acronym" translatable="false">syst.</string>
    <string name="target_area">Target area</string>
    <string name="timeline">Timeline</string>
    <string name="to">to</string>
    <string name="today">Today</string>
    <string name="trend">Trend</string>
    <string name="try_again">Try again</string>
    <string name="undo">Undo</string>
    <string name="units">Units</string>
    <string name="weight">Weight</string>
    <string name="version">Version</string>
    <string name="vibration">Vibration</string>
    <string name="change_none">Constant</string>
    <string name="change_every_six_hours">Changes every time of day</string>
    <string name="change_every_four_hours">Changes every four hours</string>
    <string name="change_every_second_hour">Changes every second hour</string>
    <string name="change_every_hour">Changes every hour</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="carbohydrates_per_100g">Carbohydrates per 100 g</string>
    <string name="energy">Energy</string>
    <string name="fat">Fat</string>
    <string name="fat_saturated">Saturated fat</string>
    <string name="fiber">Fiber</string>
    <string name="proteins">Proteins</string>
    <string name="salt">Salt</string>
    <string name="sodium">Sodium</string>
    <string name="sugar">Sugar</string>
    <string-array name="time_rhythm">
        <item>@string/change_none</item>
        <item>@string/change_every_six_hours</item>
        <item>@string/change_every_four_hours</item>
        <item>@string/change_every_second_hour</item>
        <item>@string/change_every_hour</item>
    </string-array>
    <string-array name="startscreens" translatable="false">
        <item>@string/home</item>
        <item>@string/timeline</item>
        <item>@string/log</item>
    </string-array>
    <string-array name="startscreens_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="calendarweek">Calendar week</string>
    <string name="dateend">End date</string>
    <string-array name="dateformat">
        <item>DD.MM.YYYY</item>
        <item>YYYY-MM-DD</item>
    </string-array>
    <string name="datestart">Start date</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="months">Months</string>
    <string name="year">Year</string>
    <string-array name="array_interval">
        <item>@string/week</item>
        <item>@string/month</item>
        <item>@string/year</item>
    </string-array>
    <string-array name="weekdays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>